Opened 5 years ago

Closed 5 years ago

Last modified 5 years ago

#15678 closed bug (fixed)

[Deskbar] Deskbar doesn't raise itself properly on click once auto-raise has been triggered

Reported by: diver Owned by: jscipione
Priority: normal Milestone: R1/beta2
Component: Applications/Deskbar Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by pulkomandy)

After hrev53818 auto-raise seems to be completely broken. I can trigger it sometimes if I try hard enough.

Attachments (1)

15678.png (68.1 KB ) - added by jscipione 5 years ago.
Screenshot of the problem

Download all attachments as: .zip

Change History (8)

comment:1 by diver, 5 years ago

Component: - GeneralApplications/Deskbar

comment:2 by jscipione, 5 years ago

I'm on hrev53834 here and auto-raise appears to be working for me. The functionality was changed in hrev53818 to auto-raise Deskbar only on the screen's edge instead of anywhere over the Deskbar window, could that be the reason that you are having a hard time triggering auto-raise?

comment:3 by pulkomandy, 5 years ago

Description: modified (diff)
Summary: [Deskbar] Auto-rise is completely broken[Deskbar] Auto-raise is completely broken

by jscipione, 5 years ago

Attachment: 15678.png added

Screenshot of the problem

comment:4 by jscipione, 5 years ago

Summary: [Deskbar] Auto-raise is completely broken[Deskbar] Deskbar doesn't raise itself properly on click once auto-raise has been triggered

Auto-raise triggers on screen edge but once Deskbar comes forward clicking on the window will no longer raise Deskbar like it should.

This problem has been addressed in https://review.haiku-os.org/c/haiku/+/2281

comment:5 by diver, 5 years ago

Fixed in hrev53939.

comment:6 by pulkomandy, 5 years ago

Resolution: fixed
Status: assignedclosed

comment:7 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.