Deskbar: Activate Deskbar on click, ignoring auto-raise setting.

hrev53818 fixed a bug that made the intention to raise Deskbar only
over the screen edge work again this change caused other problems.
To fix these problems always activate Deskbar on click unless
always-on-top is on (already active) or the calendar window is
showing ignoring the auto-raise setting.

Fixes #15678

Change-Id: I076a452b26250d9eb9a4eccb4a6aa6f939e11d34